--- a/style.css
+++ b/style.css
@@ -21,34 +21,44 @@ body {
     background: linear-gradient(to right, #4287f5, #42d1f5);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
-
 	font-family: "Arial";
 	margin: 0;
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
 }
 
 header {
 	font-size: 32px;
-	margin: 24px;
+	line-height: 80px;
+	text-align: center;
 }
 
 main {
 	font-size: 16px;
 	margin: 24px;
+	flex: 1;
 }
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+footer {
+	background-color: rgba(0, 0, 0, 50%);
+	font-size: 16px;
+	text-align: center;
+	color: white;
+	padding: 10px;
+	flex-shrink: 0;
+}
+
+.normalUL ul {
+  list-style-type: circle;
   overflow: hidden;
-  background-color: #333;
 }
 
-li {
+.gray-nav {
   float: left;
 }
 
-li a {
+.gray-nav a {
   display: block;
   color: white;
   text-align: center;
@@ -56,13 +66,12 @@ li a {
   text-decoration: none;
 }
 
-li a:hover {
+.gray-nav a:hover {
   background-color: #111;
 }
 
 nav {
     background-color: rgba(0, 0, 0, 50%);
-	/* background-color: #2E5894; */
 	min-height: 75px;
 	text-align: center;
 	box-shadow: 0px 0px 8px 4px #001100;
@@ -76,13 +85,10 @@ nav a {
 	display: inline-block;
 	font-size: 32px;
 	background-color: rgba(0, 0, 0, 0%);
-	/* background-color: #2E5894; */
-
 	text-decoration: none;
 	text-align: center;
 	color: #8FD400;
 	border: none;
-    
     padding-left: 1em;
     padding-right: 1em;
 
@@ -93,4 +99,68 @@ a:hover {
 
 	/* background-color: #0081AB; */
 	/* color: #8FD400; */
+}
+
+/* // c + p */
+/* // what's c + p */
+/* for a schedule of events */
+/* body {
+  background: #2D3134;
+  font-family: Helvetica, sans-serif;
+  margin-top: 50px;
+} */
+.schedule-container {
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 20%);
+  border-bottom: 3px solid #0a0a0b;
+  margin: 0 auto;
+  padding-top: 3px;
+  width: 540px;
+}
+.schedule-container h1 {
+  border-bottom: 2px solid #2D3134;
+  padding: 0 20px 20px 20px;
+}
+.schedule-container ul {
+  padding: 0px 0px 0 20px;
+  list-style-type: none;
+}
+.schedule-container ul li + li {
+  border-top: 2px solid #2D3134;
+  padding: 20px 0px 0px 0px;
+}
+.schedule-container ul li {
+  padding: 0px 0px 20px 0px;
+}
+.schedule-container ul li .frame {
+  display: table;
+  width: 100%;
+}
+.schedule-container ul li .frame .hour, .schedule-container ul li .frame .task, .schedule-container ul li .frame time {
+  display: table-cell;
+}
+.schedule-container ul li .frame .hour {
+  border: 2px solid black;
+  border-radius: 50%;
+  font-size: 20px;
+  font-weight: bold;
+  height: 22px;
+  padding: 8px;
+  text-align: center;
+  width: 22px;
+}
+.schedule-container ul li .frame .task {
+  font-size: 18px;
+  padding: 0 10px 0 10px;
+  text-align: left;
+}
+.schedule-container ul li .frame time {
+  min-width: 75px;
+  padding: 0 20px 0 10px;
+  text-align: right;
+}
+
+
+img {
+    width: 100%;
 }
