--- a/style.css
+++ b/style.css
@@ -88,6 +88,8 @@ nav {
 	text-align: center;
 	box-shadow: 0px 0px 8px 4px #001100;
 	font-family: urba;
+	position: sticky;
+	top: 0;
 }
 
 nav a {
