--- a/style.css
+++ b/style.css
@@ -92,6 +92,14 @@ nav {
 	top: 0;
 }
 
+nav img {
+	position: absolute;
+	left: 50px;
+	width: 150px;
+	height: 150px;
+	filter: drop-shadow(0px 8px 4px #001100);
+}
+
 nav a {
 	height: 75px;
 	line-height: 75px;
