--- a/style.css
+++ b/style.css
@@ -34,33 +34,43 @@ main {
 }
 
 section {
-	background-size: 100%;
-	background-repeat: no-repeat;
 	height: 500px;
 	width: 100%;
 }
 
-section img {
-  	position: absolute;
-    height: 500px;
-		z-index: -1;
-}
-    
 .cover-right {
-	width: 100%;
-	height: 100%;
 	background: linear-gradient(to right, rgba(66, 209, 245, 0.1), rgb(66, 209, 245), rgb(66, 209, 245));
 }
 
 .cover-left {
-	width: 100%;
-	height: 100%;
 	background: linear-gradient(to right, rgb(66, 209, 245), rgb(66, 209, 245), rgba(66, 209, 245, 0.1));
 }
 
-aside {
+.cover-right img, .cover-left img {
+    position: absolute;
+    height: 500px;
+	z-index: -1;
+    width: 50%;
+}
+
+.cover-right img {
+	left: 0;
+}
+
+.cover-left img {
+	right: 0;
+}
+
+.cover-right aside {
 	float: right;
 	width: 50%;
+	height: 100%;
+}
+
+.cover-left aside {
+	float: left;
+	width: 50%;
+	height: 100%;
 }
 
 summary {
@@ -94,7 +104,7 @@ nav {
 
 nav img {
 	position: absolute;
-	left: 50px;
+	left: 3%;
 	width: 150px;
 	height: 150px;
 	filter: drop-shadow(0px 8px 4px #001100);
@@ -108,7 +118,9 @@ nav a {
 	background-color: rgba(0, 0, 0, 0%);
 	text-decoration: none;
 	text-align: center;
-	color: #8FD400;
+	/* color: rgb(255, 68, 0); */
+	color: rgb(100, 245, 255);
+
 	border: none;
     padding-left: 1em;
     padding-right: 1em;
@@ -118,6 +130,40 @@ nav a {
 a:hover {
 	background-color: rgba(0, 0, 0, 20%);
 }
+
+
+
+@media only screen and (max-width: 1050px) {
+	nav {
+		top: -200px;
+	}
+	nav img {
+		position: relative;
+		display: block;
+		margin: auto;
+		left: 0%;
+		width: 200px;
+		height: 200px;
+		filter: drop-shadow(0px 8px 4px #001100);
+	}
+	.cover-right img, .cover-left img {
+		width: 100%;
+	}
+	.cover-right, .cover-left {
+		background: linear-gradient(to top, rgba(66, 209, 245, 0.1), rgb(66, 209, 245), rgb(66, 209, 245));
+	}
+	.cover-left aside, .cover-right aside {
+		width: 100%;
+	}
+}
+
+@media only screen and (max-width: 800px) {
+	nav {
+		top: 0px;
+		position: relative;
+	}
+}
+
 .schedule-container {
   border-radius: 10px;
   background: rgba(255, 255, 255, 20%);
